# ECNUNetLogin

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.zh-CN.md  environment.yml  pyproject.toml
docs/: cli.md  config.md  install.md  protocol.md  scripting.md  troubleshooting.md
docs/zh-CN/: cli.md  config.md  install.md  scripting.md  troubleshooting.md
scripts/: install.sh  install_conda_env.sh  setup.sh  uninstall.sh
src/auth_ecnu/: __init__.py  cli.py  client.py  config.py  constants.py  errors.py  models.py  protocol.py  render.py
tests/: test_auth_ecnu.py  test_setup_sh.py
